exports[`Column`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0,
            }
          }>
          Layout
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }>
          Column
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        className="gds-layout__row ">
        <div
          className="gds-layout__column--md-6">
          column a
        </div>
        <div
          className="gds-layout__column--md-6">
          column b
        </div>
      </div>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }>
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15,
            }
          }>
          Responsive columns are constructed using the breakpoint attributes. A breakpoint can be xs, sm, md, lg or xl. Width can be any integer from 1 to 12.
        </p>
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15,
            }
          }>
          The Design System uses a standard 12-column grid, so at a given breakpoint, columns ending in-3 will be 25% wide (3 of the 12 columns), columns ending in-6 will be 50% wide (6 of the 12 columns), columns ending in-9 will be 75% wide (9 of the 12 columns), and so on.
        </p>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }>
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Row
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                >
              </span>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  Column
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      md
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }>
                            6
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  >
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 48,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  column a
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  </
                  Column
                  >
                </span>
              </div>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  Column
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}>
                      md
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}>
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }>
                            6
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  >
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 48,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  column b
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  </
                  Column
                  >
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                </
                Row
                >
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            Column
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  children
                </td>
                <td>
                  node
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  lg
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  md
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }>
                    \"
                    12
                    \"
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  sm
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  xl
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  xs
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            Row
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  children
                </td>
                <td>
                  node
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  className
                </td>
                <td>
                  string
                </td>
                <td>
                  no
                </td>
                <td>
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }>
                    \"
                    
                    \"
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LayoutContainer`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0,
            }
          }>
          Layout
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }>
          LayoutContainer
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        className="gds-layout__container  "
        id={undefined}
        onClick={[Function]}>
        <div
          className="gds-layout__row ">
          <div
            className="gds-layout__column--md-4">
            Example
          </div>
          <div
            className="gds-layout__column--md-4">
            Example
          </div>
          <div
            className="gds-layout__column--md-4">
            Example
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }>
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15,
            }
          }>
          The layout component is used for centering containers and for responsive grid columns. The grid system works exactly like Twitter Bootstrap’s, with columns automatically stacking at mobile widths. All page content except for the gds-page-header and gds-slide-nav components should be placed inside the <LayoutContainer />.
        </p>
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15,
            }
          }>
          By default, the LayoutContainer has a max-width of 1200px. For a 100% width container, use the attribute full={ true }
        </p>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }>
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                LayoutContainer
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    onClick
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          callbackFunc()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                >
              </span>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  <
                  Row
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  >
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    <
                    Column
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}>
                        md
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}>
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }>
                              4
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    >
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 63,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    Example
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    </
                    Column
                    >
                  </span>
                </div>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    <
                    Column
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}>
                        md
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}>
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }>
                              4
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    >
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 63,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    Example
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    </
                    Column
                    >
                  </span>
                </div>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    <
                    Column
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}>
                        md
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}>
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }>
                              4
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    >
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 63,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    Example
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }>
                    </
                    Column
                    >
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }>
                  </
                  Row
                  >
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                </
                LayoutContainer
                >
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            Column
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  children
                </td>
                <td>
                  node
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  lg
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  md
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }>
                    \"
                    12
                    \"
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  sm
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  xl
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  xs
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            LayoutContainer
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  children
                </td>
                <td>
                  node
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  className
                </td>
                <td>
                  string
                </td>
                <td>
                  no
                </td>
                <td>
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }>
                    \"
                    
                    \"
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  fullWidth
                </td>
                <td>
                  bool
                </td>
                <td>
                  no
                </td>
                <td>
                  <span>
                    {
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }>
                      false
                    </span>
                    }
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            Row
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  children
                </td>
                <td>
                  node
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  className
                </td>
                <td>
                  string
                </td>
                <td>
                  no
                </td>
                <td>
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }>
                    \"
                    
                    \"
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Row`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0,
            }
          }>
          Layout
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }>
          Row
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        className="gds-layout__row extra-classes are welcome"
        style={
          Object {
            "border": "1px dashed red",
          }
        }>
        Example
      </div>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }>
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15,
            }
          }>
          <Row> is meant to hold one or more <Column>
        </p>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }>
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Row
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    className
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        extra-classes are welcome
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    style
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            border
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }>
                            \"
                            1px dashed red
                            \"
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                >
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                Example
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                </
                Row
                >
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            Row
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  children
                </td>
                <td>
                  node
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  className
                </td>
                <td>
                  string
                </td>
                <td>
                  no
                </td>
                <td>
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }>
                    \"
                    
                    \"
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
